--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon app/server.js",
+    "start": "nodemon Backend/app/server.js",
     "build": "npm i"
   },
   "author": "karthi_KN",
